# Code2Image

./: MANIFEST.in  README.md  publish_shit.sh  test_file.js  test_local.sh  tester.sh
code2image/: MANIFEST.in  main_tester.sh  pyproject.toml
code2image/code2image/: fotetizar.py  fotetizar_mac_ready.py  fotetizar_mac_ready_with_header_ok.py  fotetizarback2.py
code2image/tests/: tester.sh
fotetizar/: MANIFEST.in  README.md  pyproject.toml
test/: response.json  script_base.py  script_ok.py  test_from_console.py  tester.sh
